unpackaged/main/default/objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Channel</label>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>