unpackaged/main/default/objects/Channel__c/fields/Age_Split_18_24_years_old__c.field-meta.xml
<CustomField>
    <fullName>Age_Split_18_24_years_old__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Age Split (18 - 24 years old, %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>