unpackaged/main/default/objects/Channel__c/fields/Engagement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rate__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <inlineHelpText>Engagement rate is calculated 
manually by dividing  total number of  last 10 posts by number of followers ?</inlineHelpText>
    <label>Engagement Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>