unpackaged/main/default/objects/Channel__c/fields/Followers_from_Destination_Market__c.field-meta.xml
<CustomField>
    <fullName>Followers_from_Destination_Market__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <inlineHelpText>Percentage of followers that influencer has for destination market 
(e.g.  what % of influencer&#39;s followers are from Germany, if this influencer is selected for German campaign)</inlineHelpText>
    <label>Followers from Destination Market (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>