unpackaged/main/default/objects/Channel__c/fields/Following__c.field-meta.xml
<CustomField>
    <fullName>Following__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Following</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>