unpackaged/main/default/objects/Channel__c/fields/Gender_Split_male__c.field-meta.xml
<CustomField>
    <fullName>Gender_Split_male__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Gender Split (male)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>