unpackaged/main/default/objects/Channel__c/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Influencer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Influencer field requires Account RecordType Influencer</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Influencer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channels</relationshipLabel>
    <relationshipName>Influencers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>