unpackaged/main/default/objects/Channel__c/fields/Link2__c.field-meta.xml
<CustomField>
    <fullName>Link2__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <formula>HYPERLINK(IF(OR(CONTAINS(Link__c,&#39;http://&#39;) ,CONTAINS(Link__c,&#39;https://&#39;)), Link__c, &#39;http://&#39;+Link__c) , &#39;Click here&#39;, &#39;target&#39;)</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>