unpackaged/main/default/objects/Channel__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>