unpackaged/main/default/objects/Channel__c/fields/Main_Channel__c.field-meta.xml
<CustomField>
    <fullName>Main_Channel__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Main Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>