unpackaged/main/default/objects/Channel__c/fields/Posts_total__c.field-meta.xml
<CustomField>
    <fullName>Posts_total__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <inlineHelpText>Only relevant for IG channel</inlineHelpText>
    <label>Posts (total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>