unpackaged/main/default/objects/Channel__c/fields/Posts_Videos_Frequency_per_week__c.field-meta.xml
<CustomField>
    <fullName>Posts_Videos_Frequency_per_week__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Posts/Videos Frequency (per week)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2 posts per week</fullName>
            </value>
            <value>
                <fullName>3-5 posts per week</fullName>
            </value>
            <value>
                <fullName>6-8 posts per week</fullName>
            </value>
            <value>
                <fullName>more than 9 posts per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>