unpackaged/main/default/objects/Channel__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <description>US-0011821 - 1.2.2 Influencer (API for channel record)</description>
    <formula>IMAGE(&#39;test&#39;, &#39;Profile Picture&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture</label>
    <type>Text</type>
</CustomField>