unpackaged/main/default/objects/Channel__c/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <description>US-0011821 - 1.2.2 Influencer (API for channel record)</description>
    <label>Profile Picture URL</label>
    <type>Url</type>
</CustomField>