unpackaged/main/default/objects/Channel__c/fields/Reels__c.field-meta.xml
<CustomField>
    <fullName>Reels__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Reels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>