unpackaged/main/default/objects/Channel__c/fields/Social_Media_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Channel_Type__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <label>Social Media Channel (type)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Snapchat</fullName>
            </value>
            <value>
                <fullName>Twitch</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>