unpackaged/main/default/objects/Channel__c/fields/Videos__c.field-meta.xml
<CustomField>
    <fullName>Videos__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <inlineHelpText>Only relevant for YT channel</inlineHelpText>
    <label>Videos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>