unpackaged/main/default/objects/Channel__c/fields/Views_to_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Views_to_Subscribers__c</fullName>
    <description>US-0011805 - 1.2. Influencer (channel record types)</description>
    <inlineHelpText>Only relevant for YouTube channel. 
Views-to Subscribers is calculated 
manually by dividing total number of views from videos of the last 4 weeks by number of followers</inlineHelpText>
    <label>Views-to-Subscribers (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>